// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#<SelectField> should render props 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <select
      className="form-control form-control-lg "
      name="fruitChoice"
      onChange={[Function]}
      options={
        [
          "banana",
          "apple",
          "orange",
        ]
      }
      size="lg"
    >
      <option
        value="banana"
      >
        banana
      </option>
      <option
        value="apple"
      >
        apple
      </option>
      <option
        value="orange"
      >
        orange
      </option>
    </select>
  </div>
</form>
`;

exports[`#<SelectField> should render props from object keys 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <select
      className="form-control form-control-lg "
      name="fruitChoice"
      objectkey="id"
      objectvalue="name"
      onChange={[Function]}
      options={
        [
          {
            "id": 1,
            "name": "first",
          },
          {
            "id": 2,
            "name": "second",
          },
          {
            "id": 3,
            "name": "third",
          },
        ]
      }
      size="lg"
    >
      <option
        value={1}
      >
        first
      </option>
      <option
        value={2}
      >
        second
      </option>
      <option
        value={3}
      >
        third
      </option>
    </select>
  </div>
</form>
`;

exports[`<Form /> should render a form element with bootstrap extra tags 1`] = `
<form
  bare={false}
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "username": "joebloggs",
    }
  }
/>
`;

exports[`<Form /> should render a form element with no extra tags 1`] = `
<form
  onSubmit={[Function]}
/>
`;
